# IntroCC_Final_Project_TMDB

./: .env.example  .gitignore  AGENTS.md  LICENSE  README.md  main.py  model_card.md  pyproject.toml
models/: metrics.json  model_card.md
models/rating_model/: model_rating.joblib
models/revenue_model/: model_revenue.joblib
src/: config.py
src/app/: Home.py  _data.py  _gold_refresh.py
src/app/pages/: 1_Sample_Data.py  2_Analytics.py  3_ML_Prediction.py
src/ingest/: __main__.py  bronze.py  embeddings.py  gold.py  silver.py  storage.py  tmdb_client.py  upload_s3.py
src/io/: __init__.py  store.py
src/ml/: __init__.py  __main__.py  features.py  model_card.py  paths.py  predict.py  tabpfn_model.py  train.py
src/tools/: __init__.py  trace_movie.py
tests/: test_app_data.py  test_bronze_streaming.py  test_ingest_smoke.py  test_ml_smoke.py  test_s3_store.py  test_trace_movie.py  test_upload_s3.py
