[project]
name = "introcc-final-project-tmdb"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "awscrt>=0.32.1",
    "boto3>=1.42.84",
    "httpx>=0.28.1",
    "joblib>=1.5.3",
    "polars>=1.39.3",
    "pyarrow>=23.0.1",
    "pydantic-settings>=2.13.1",
    "python-dotenv>=1.2.2",
    "scikit-learn>=1.8.0",
    "streamlit>=1.56.0",
    "tenacity>=9.1.4",
    "tqdm>=4.67.3",
]

[dependency-groups]
dev = [
    "moto[s3]>=5.1.22",
    "pytest>=9.0.3",
    "ruff>=0.15.11",
    "ty>=0.0.31",
]
